--- a/views/partials/_head.ejs
+++ b/views/partials/_head.ejs
@@ -1,79 +1,92 @@
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>TinyApp | URL Shortener</title>
-<link rel="stylesheet"  href="https://meyerweb.com/eric/tools/css/reset/reset.css">
-<style>
-	header {
-		margin: 30px 0 20px 0;
-	}
-	a:visited {
-		color: blue;
-	}
-	a {
-		text-decoration: none;
-		vertical-align: middle;
-		border-bottom: 1px solid blue;
-		margin: 0 10px;
-		transition: .3s ease;
-	}
-	a:hover {
-		color: black;
-	}
-	main {
-		max-width: 800px;
-		display: inline-block;
-		text-align: left;
-	}
-	body {
-		text-align: center;
-		font-family: 'Helvetica', sans-serif;
-	}
-	h1 {
-		display: inline-block;
-		color: #B12424;
-		margin: 0 10px 0 0;
-		font-size: 3.5em;
-	}
-	h2 {
-		display: inline-block;
-		margin: 0 0 20px 0;
-	}
-	th {
-		font-weight: bold;
-		text-align: left;
-		padding: 5px 10px;
-		border-bottom: 1px solid black;
-		color: black;
-	}
-	tr {
-		transition: .3s ease;
-	}
-	tr:hover {
-		color: #B12424;
-	}
-	td {
-		padding: 5px 10px;
-		vertical-align: middle;
-	}
-	h3 span {
-		font-weight: normal;
-	}
-	p {
-		margin: 10px 0 0 0;
-	}
-	button {
-		margin: 0;
-		padding: 4px 7px 6px 7px;
-		background: black;
-		color: white;
-		font-size: .75em;
-		border: none;
-		transition: .3s ease;
-	}
-	button:hover {
-		background-color: blue;
-		color: white;
-		cursor: pointer;
-	}
-</style>
+<!DOCTYPE html>
+<html lang="en">
+<body>
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>TinyApp | URL Shortener</title>
+	<style>
+		header {
+			margin: 30px 0 20px 0;
+		}
+		a:visited {
+			color: blue;
+		}
+		a {
+			text-decoration: none;
+			vertical-align: middle;
+			border-bottom: 1px solid blue;
+			margin: 0 10px;
+			transition: .3s ease;
+		}
+		a:hover {
+			color: black;
+		}
+		main {
+			max-width: 800px;
+			display: inline-block;
+			text-align: left;
+		}
+		body {
+			text-align: center;
+			font-family: 'Helvetica', sans-serif;
+		}
+		h1 {
+			display: inline-block;
+			color: #B12424;
+			margin: 0 10px 0 0;
+			font-size: 3.5em;
+		}
+		h2 {
+			display: inline-block;
+			margin: 0 0 20px 0;
+		}
+		th {
+			font-weight: bold;
+			text-align: left;
+			padding: 5px 10px;
+			border-bottom: 1px solid black;
+			color: black;
+		}
+		tr {
+			transition: .3s ease;
+		}
+		tr:hover {
+			color: #B12424;
+		}
+		td {
+			padding: 5px 10px;
+			vertical-align: middle;
+		}
+		h3 span {
+			font-weight: normal;
+		}
+		p {
+			margin: 10px 0 0 0;
+		}
+		button {
+			margin: 0;
+			padding: 4px 7px 6px 7px;
+			background: black;
+			color: white;
+			font-size: .75em;
+			border: none;
+			transition: .3s ease;
+		}
+		button:hover {
+			background-color: blue;
+			color: white;
+			cursor: pointer;
+		}
+		button:focus {
+			transition: none;
+		}
+		button:focus:hover {
+			transition: .3s ease;
+		}
+		form {
+			margin: 0 0 15px 0;
+		}
+	</style>
+</head>
