--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,7 +2,8 @@
 	<% include partials/_header %>
 	<main>
 		<form method='POST' action="/login">
-			<input type="email" name="email" placeholder='email@example.com'>
+			<label for="email">Log in:</label>
+			<input type="email" name="email" placeholder='email@example.com' autofocus>
 			<input type="password" name="password" placeholder='••••••••'>
 			<button type="submit">Log in</button>
 		</form>
