--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -2,7 +2,7 @@
 	<% include partials/_header %>
 	<form action='/urls' method='POST' style='margin:70px'>
 		<label for="longURL">Enter a URL:</label>
-		<input type="text" name="longURL" placeholder="http://" style='width: 300px'>
+		<input type="text" name="longURL" placeholder="http://" style='width: 300px' autofocus>
 		<input type="submit" value="Submit">
 	</form>
 </body>
