--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,8 +1,8 @@
 <% include partials/_head %>
 	<% include partials/_header %>
 	<main>
+		<h2>Log in</h2>
 		<form method='POST' action="/login">
-			<label for="email">Log in:</label>
 			<input type="email" name="email" placeholder='email@example.com' autofocus>
 			<input type="password" name="password" placeholder='••••••••'>
 			<button type="submit">Log in</button>
